--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -48,6 +48,7 @@
         <a class="nav-link" href="{% url 'home' %}">🏠 Dashboard</a>
         <a class="nav-link" href="{% url 'cc_list' %}">📄 Cuadros comparativos</a>
         <a class="nav-link" href="{% url 'op_list' %}">💳 Órdenes de pago</a>
+        <a class="nav-link" href="{% url 'provider_list' %}">🏭 Proveedores</a>
         <a class="nav-link" href="/admin/">⚙️ Administración</a>
       </nav>
 
